# token-counter-cli

./: .coverage  .gitignore  README.md  pyproject.toml
tests/: test_budget.py  test_cli.py  test_counting.py  test_input.py  test_models.py  test_output.py
tests/fixtures/: golden_strings.json  sample_messages.json  simple_text.txt
token_counter_cli/: __init__.py  budget.py  cli.py  counting.py  input.py  main.py  models.py  output.py
token_counter_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
